--- a/index.html
+++ b/index.html
@@ -41,28 +41,28 @@
         </div>
         <div class="items">
         <div class="item">
-            <img src="img/css-logo-300x300.png"></img>
+            <img src="css-logo-300x300.png"></img>
             <div>
             <h3>HTML&CSS</h3>
             <p>Uporabniško prijazna in tekoča spletna vsebina.</p>
             </div>
         </div>
         <div class="item">
-            <img src="img/php-flat.png" ></img>
+            <img src="php-flat.png" ></img>
             <div>
             <h3>PHP</h3>
             <p>Izdelava Log-in-ov , varno pošiljanje podatkov preko https.</p>
             </div>
         </div>
         <div class="item">
-            <img src="img/mysql-logo.png"></img>
+            <img src="mysql-logo.png"></img>
             <div>
                 <h3>mySQL</h3>
                 <p>Upravljanje relational databases. </p>
             </div>
         </div>
         <div class="item">
-            <img src="img/jsLogo.png"></img>
+            <img src="jsLogo.png"></img>
             <div>
                 <h3>JavaScript</h3>
                 <p>Upravljanje relational databases. </p>
